--- a/foot-web/src/styles.scss
+++ b/foot-web/src/styles.scss
@@ -1,1 +1,79 @@
+
 /* You can add global styles to this file, and also import other style files */
+//npx tailwindcss -i ./input.css -o ./output.css --watch
+// Custom.scss
+// Option A: Include all of Bootstrap
+
+// Include any default variable overrides here (though functions won't be available)
+
+// @import "../node_modules/bootstrap/scss/bootstrap";
+
+// Then add additional custom code here
+
+// html, body { height: 100%; }
+// body { margin: 0;  
+//     font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+//     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+//     "Segoe UI Symbol"; 
+// }
+
+// main {
+//     color: var(--gray-700);
+//     background-color: whitesmoke;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     padding: 1rem;
+//     box-sizing: inherit;
+//     position: relative;
+// }
+
+// html, body, div, span, applet, object, iframe,
+// h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+// a, abbr, acronym, address, big, cite, code,
+// del, dfn, em, img, ins, kbd, q, s, samp,
+// small, strike, strong, sub, sup, tt, var,
+// b, u, i, center,
+// dl, dt, dd, ol, ul, li,
+// fieldset, form, label, legend,
+// table, caption, tbody, tfoot, thead, tr, th, td,
+// article, aside, canvas, details, embed, 
+// figure, figcaption, footer, header, hgroup, 
+// menu, nav, output, ruby, section, summary,
+// time, mark, audio, video {
+//     margin: 0;
+//     padding: 0;
+//     border: 0;
+//     font-size: 100%;
+//     font: inherit;
+//     vertical-align: baseline;
+// }
+// /* HTML5 display-role reset for older browsers */
+// article, aside, details, figcaption, figure, 
+// footer, header, hgroup, menu, nav, section {
+//     display: block;
+// }
+// body {
+//     line-height: 1;
+// }
+// ol, ul {
+//     list-style: none;
+// }
+// blockquote, q {
+//     quotes: none;
+// }
+// blockquote:before, blockquote:after,
+// q:before, q:after {
+//     content: '';
+//     content: none;
+// }
+// table {
+//     border-collapse: collapse;
+//     border-spacing: 0;
+// }
+
+// :host {
+//     box-sizing: border-box;
+//     -webkit-font-smoothing: antialiased;
+//     -moz-osx-font-smoothing: grayscale;
+// }
