ajustes modal escalacao, scripts boostrap, interfaces, outros

--- a/foot-stats/src/app/app.component.html
+++ b/foot-stats/src/app/app.component.html
@@ -1,6 +1,8 @@
 <main class="main">
 
-  <h1>Hello World</h1>
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
   <button mat-button (click)="openModal()">
     Teste
   </button>
