--- a/foot-web/src/app/app.component.scss
+++ b/foot-web/src/app/app.component.scss
@@ -1,7 +1,8 @@
 
-img{
-    height: 70px;
-}
+
+// img{
+//     height: 60px;
+// }
 
 // :host {
 //     // font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
