--- a/foot-web/src/app/campeonato/campeonato.component.scss
+++ b/foot-web/src/app/campeonato/campeonato.component.scss
@@ -3,12 +3,18 @@
     {
         &_titulo
         {
+            padding-top: 10px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
             button{
                 padding: 10px;
+            }
+            h3{
+                margin-top: 5px;
+                padding-right: 10px;
+                padding-left: 10px;
             }
         }
     }
