--- a/foot-web/src/app/squad/squadDialogComponent.component.scss
+++ b/foot-web/src/app/squad/squadDialogComponent.component.scss
@@ -7,94 +7,41 @@
   position: relative;
   &__campos{
     width: 100%;
+    padding-left: 20px;
+    padding-bottom: 15px;
   }
-  
-
+  font-size: 15px;
 }
-
-:host{
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-"Segoe UI Symbol";
-box-sizing: border-box;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
+.material-symbols-outlined{
+  font-size: 15px;
 }
-
-h1 {
-font-size: 3.125rem;
-color: var(--gray-900);
-font-weight: 500;
-line-height: 100%;
-letter-spacing: -0.125rem;
-margin: 0;
-font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-"Segoe UI Symbol";
+.container{
+  padding-top: 0px;
+  .noitens{
+    padding-top: 10px; 
+  }
 }
-div{
-    letter-spacing: -0.020rem;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-"Segoe UI Symbol";
-}
-
-.mat-mdc-row .mat-mdc-cell {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-  cursor: pointer;
-}
-
-.ng-container{
-  flex: 0 0 100px; 
-}
-  
-.mat-mdc-row:hover .mat-mdc-cell {
-  border-color: currentColor;
-  // font-size: 10px;
-  // width: 5px;
-  // line-height: 5px;
-}
-
-
-.mat-mdc-row{
-    // font-size: 10px;
-    // width: 5px;
-    // line-height: 5px;
-    // padding-left: 3px;
-    // padding-right: 0px;
-    // padding-top: 0px;
-    padding-bottom: 0px;
-}
-  
-.demo-row-is-clicked 
-{
+.equipes{
+  padding-bottom: 8px;
   font-weight: bold;
+  font-size: 18px;
+  img{
+    width: 30px;
+  }
 }
 
-.div-mat-dialog{
-  //  display: flex;
-  //   align-content: flex-start;
-  //   flex-wrap: wrap;
-  // display: flex;
-  // flex-wrap: wrap;
-  // flex-direction: column;
-  // align-content: flex-start;
-  margin-top: 0px;
+.col-sm-3{
+  padding: 0px;
 }
 
-.mat-grid-tile {
-  // position: absolute;
-  margin-top: 0px;
-  // justify-content: center;
-  // overflow: auto;
-  // display: flex;
-  // align-content: flex-start;
-  // flex-wrap: wrap;
-}
-
-.mat-grid-list{
-  margin-top: 0px;
-  // height: calc(1000px);
-  // width: calc(1800px);
+.reservas{
+  font-size: 10px;
+  color: (#a1a1a1);
+  padding-top: 2px;
+  div{
+    padding-left: 20px;
+  }
+  .col-sm-1{
+    padding-left: 5px;
+  }
 }
