--- a/foot-web/src/styles.scss
+++ b/foot-web/src/styles.scss
@@ -17,16 +17,16 @@
 //     "Segoe UI Symbol"; 
 // }
 
-// main {
-//     color: var(--gray-700);
-//     background-color: whitesmoke;
+main {
+     color: var(--gray-700);
+     background-color: whitesmoke;
 //     display: flex;
 //     justify-content: center;
 //     align-items: center;
 //     padding: 1rem;
 //     box-sizing: inherit;
 //     position: relative;
-// }
+}
 
 // html, body, div, span, applet, object, iframe,
 // h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -72,8 +72,11 @@
 //     border-spacing: 0;
 // }
 
-// :host {
-//     box-sizing: border-box;
-//     -webkit-font-smoothing: antialiased;
-//     -moz-osx-font-smoothing: grayscale;
-// }
+:host {
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+::-webkit-scrollbar {
+    width: 1px;
+}
