ajustes scouts, grid estatisticas e padding escalacao

--- a/foot-web/src/app/squad/squadDialogComponent.component.html
+++ b/foot-web/src/app/squad/squadDialogComponent.component.html
@@ -31,7 +31,7 @@
               <div class="col-sm-1">
                 <!-- {{item.mandante.atividade}} -->
                 <span *ngFor="let x of createArray(item.mandante.gols)"  class="material-symbols-outlined">sports_soccer</span>
-                <span *ngFor="let y of createArray(item.mandante.gols_contra)" class="material-symbols-outlined" style="color: #ff6767">sports_soccer</span>
+                <span *ngFor="let y of createArray(item.mandante.gols_contra)" class="material-symbols-outlined" style="color: #ff6767; padding: 0px;">sports_soccer</span>
                 <!-- <div *ngIf="escalacao && escalacao.length > 0; else noItems"> -->
                 <!-- <span *ngIf="item.mandante.gols > 0" class="material-symbols-outlined">sports_soccer</span>
                 </div>
